- ADD: Added leader board chart to stats page. - CHG: Slight improvements to 2021 day 3. - CHG: Dark mode fixes.

--- a/src/assets/scss/custom-dark.scss
+++ b/src/assets/scss/custom-dark.scss
@@ -5,6 +5,10 @@ body.dark-mode select {
     color: #e8e6e3;
 }
 
+body.dark-mode pre {
+  color: inherit;
+}
+
 body.dark-mode {
   background-color: rgb(24, 26, 27);
   color: rgb(207, 203, 197);
